--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -17,25 +17,26 @@
 				%li
 					%a{:href => "#contact", :title => "Get in Touch"} Get in Touch
 
-		%svg.svg_nm-logo
-			%use{"xlink:href" => "#nm_logo"}
+		%svg.svg_nn-logo
+			%use{"xlink:href" => "#nn_logo"}
 
-		%h2.tagline A Northern Italian Kitchen
+		.wrap_rule
+			%h2.tagline A Northern Italian Kitchen
 
 		%h1.visuallyhidden North and Navy
 		.wordmark.wrap_svg
-			%svg.svg_nm-wordmark
-				%use{"xlink:href" => "#nm_wordmark"}
+			%svg.svg_nn-wordmark{:viewBox => "0 0 850 327"}
+				%use{"xlink:href" => "#nn_wordmark"}
 
 		%h3.address 226 Nepean St.
-		%a{:href => "tel:+1-613-232-6289", :title => "Call us"} (613) 232-6289
+		%a.phone{:href => "tel:+1-613-232-6289", :title => "Call us"} (613) 232-6289
 
 		%ul.social_links
 			%li.social_twitter
 				%a.wrap_svg{:href => "#", :title => "Follow us on Twitter"}
-					%svg.svg_ui-twitter
+					%svg.svg_ui-twitter{:viewBox => "0 0 64 46"}
 						%use{"xlink:href" => "#ui_twitter"}
 			%li.social_instagram
 				%a.wrap_svg{:href => "#", :title => "Follow us on Instagram"}
-					%svg.svg_ui-instagram
+					%svg.svg_ui-instagram{:viewBox => "0 0 64 64"}
 						%use{"xlink:href" => "#ui_instagram"}
