--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,11 +1,15 @@
 // SASS Variables
 // ----------------------------------------------------------------------------
 
-$hsla_blue: hsla(213,63%,22%,1);
+$hsla_blue:   hsla(213,63%,22%,1);
+$hsla_blue-D: hsla(213,63%,10%,1);
 
-$hsla_gold: hsla(41,44%,61%,1);
+$hsla_gold:   hsla(41,44%,61%,1);
+$hsla_gold-D: hsla(41,44%,44%,1);
 
-$hsla_L96: hsla(0,0%,96%,1);
+$hsla_pink:   hsla(4,100%,75%,1);
+
+$hsla_L96:    hsla(0,0%,96%,1);
 
 
 // One stylesheet to rule them all
