--- a/dev/haml/partials/_html_footer.haml
+++ b/dev/haml/partials/_html_footer.haml
@@ -8,15 +8,12 @@
 			%a{:href => "tel:+1-613-232-6289", :title => "Call us"} 613.232.6289
 
 	%ul.footer_pride
-		%li.pride_can
-			%span.wrap_txt Can
+		%li.pride_can Can
 		%li.pride_cross
-			%span.wrap_svg
-				%svg.svg_ui-close
-					%use{"xlink:href" => "#ui_close"}
-		%li.pride_ita
-			%span.wrap_txt Ita
+			%svg.svg_ui-close
+				%use{"xlink:href" => "#ui_close"}
+		%li.pride_ita Ita
 
-	%p &copy; 2015
+	%p.copyright &copy; 2015
 
 = Haml::Engine.new(File.read("dev/haml/partials/_doc_scripts.haml")).render
