--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -9,17 +9,20 @@ input,
 optgroup,
 select,
 textarea {
-	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'Slabo 13px', Georgia, Times, "Times New Roman", serif;
+	// font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
 	// font-variant-numeric: oldstyle-nums;
+	color: $hsla_blue;
 }
 body {
 	position: relative;
-	border-top: 0.6rem solid $hsla_blue;
+	text-align: center;
 	background: $hsla_L96;
+	border-top: 0.6rem solid $hsla_blue;
 }
 ::selection {
-	color: $hsla_L96;
-	background-color: $hsla_blue;
+	color: $hsla_blue;
+	background-color: $hsla_gold;
 }
 
 /*
@@ -117,6 +120,18 @@ footer {
 	display: inline;
 }
 
+
+// + links + \\
+a {
+	color: $hsla_blue;
+}
+a:hover {
+	color: $hsla_gold;
+}
+a:active {
+	color: $hsla_gold-D;
+}
+
 // --- Containers --- \\
 [data-container] {
 	margin-left: auto;
@@ -168,40 +183,28 @@ html.overlay_active body {
 	visibility: visible;
 }
 
-/*
+
 // Buttons
 // ----------------------------------------------------------------------------
-.btn_rnd {
-	display: table; // inline-block does not allow margin centering
+.button {
+	display: inline-block;
 	margin: 0 auto;
-	padding: 0 2rem;
-	height: 4.8rem;
-	line-height: 4.8rem;
-	font-size: 1.4rem;
+	padding: 2.2rem 2.6rem; // computed height is 65px
+	font-size: 1.5rem;
 	letter-spacing: 0.2rem;
 	text-align: center;
 	text-transform: uppercase;
-	border-radius: 0.8rem;
+	border: 0.1rem solid $hsla_blue;
 }
-a[class*="brd_"],
-button[class*="brd_"] {
-	box-shadow: inset 0 0 0 0.2rem;
+.button:hover {
+	// color: $hsla_gold;
+	border-color: $hsla_gold;
 }
-// + fill: orange + \\
-.fill_orange {
-	color: #000;
-	background-color: #fff;
+.button:active {
+	// color: $hsla_gold-D;
+	border-color: $hsla_gold-D;
 }
-.fill_orange:focus,
-.fill_orange:hover {
-	color: #fff;
-	background-color: #000;
-}
-.fill_orange:active {
-	color: #fff;
-	background-color: #000;
-}
-*/
+
 
 // ==|== common sections ======================================================
 // ============================================================================
@@ -209,9 +212,113 @@ button[class*="brd_"] {
 // Header
 // ----------------------------------------------------------------------------
 header {
+	padding: 6rem 1.6rem;
 }
 header div[data-container] {
 }
+
+
+svg.svg_nn-logo {
+	margin: 0 auto 4rem auto;
+	width: 12rem;
+	height: 9.8rem;
+	fill: $hsla_blue;
+}
+div.wrap_rule {
+	position: relative;
+	margin-bottom: 6rem;
+}
+div.wrap_rule::before {
+	content: "";
+	display: block;
+	position: absolute;
+	z-index: -1;
+	top: 49%;
+	right: 0;
+	left: 0;
+	height: 0.1rem;
+	background-color: $hsla_gold;
+}
+h2.tagline {
+	display: inline-block;
+	padding: 0 1.4rem;
+	font-size: 1.8rem; // 2.2rem;
+	color: $hsla_gold;
+	background-color: $hsla_L96;
+}
+div.wordmark.wrap_svg {
+	margin-bottom: 6rem;
+}
+svg.svg_nn-wordmark {
+	// display: inline;
+	fill: $hsla_blue;
+}
+
+
+
+h3.address {
+	margin-bottom: 2rem;
+	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-size: 2.2rem;
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
+}
+a.phone {
+	display: inline-block;
+	margin-bottom: 3.2rem;
+	font-size: 1.4rem;
+	letter-spacing: 0.2rem;
+}
+
+ul.social_links {
+}
+ul.social_links li {
+	display: inline-block;
+}
+ul.social_links li a.wrap_svg {
+	display: inline-block;
+	height: 2.8rem;
+}
+ul.social_links li a.wrap_svg svg {
+	display: inline; // webkit does not respect [viewBox] selector
+	fill: $hsla_blue;
+}
+ul.social_links li.social_twitter {
+	margin-right: 1rem;
+}
+ul.social_links li.social_twitter a.wrap_svg {
+	width: 3.9rem; // webkit requires an explicit width
+}
+ul.social_links li.social_instagram a.wrap_svg {
+	width: 2.8rem; // webkit requires an explicit width
+}
+
+ul.social_links li a.wrap_svg:hover svg {
+	fill: $hsla_gold;
+}
+ul.social_links li a.wrap_svg:active svg {
+	fill: $hsla_gold-D;
+}
+
+/*
+		%h1.visuallyhidden North and Navy
+		.wordmark.wrap_svg
+			%svg.svg_nn-wordmark
+				%use{"xlink:href" => "#nn_wordmark"}
+
+		%h3.address 226 Nepean St.
+		%a{:href => "tel:+1-613-232-6289", :title => "Call us"} (613) 232-6289
+
+		%ul.social_links
+			%li.social_twitter
+				%a.wrap_svg{:href => "#", :title => "Follow us on Twitter"}
+					%svg.svg_ui-twitter
+						%use{"xlink:href" => "#ui_twitter"}
+			%li.social_instagram
+				%a.wrap_svg{:href => "#", :title => "Follow us on Instagram"}
+					%svg.svg_ui-instagram
+						%use{"xlink:href" => "#ui_instagram"}
+*/
 
 /*
 // --- Nav Toggle --- \\
@@ -249,6 +356,10 @@ a.nav_toggle div.wrap_menu span.three {
 	top: 1.8rem;
 }
 */
+
+nav {
+	display: none;
+}
 
 /*
 // --- Navigation --- \\
@@ -317,30 +428,238 @@ body.toggled_mobile-nav a.nav_toggle div.wrap_menu span.three {
 }
 */
 
+
 // Footer
 // ----------------------------------------------------------------------------
 footer {
-	padding: 4rem 1.6rem;
+	padding-bottom: 8rem;
 	text-align: center;
 }
-// --- Contact Info --- \\
+p.copyright {
+	font-size: 1.1rem;
+	letter-spacing: 0.1rem;
+}
+// --- Footer Contact --- \\
 ul.footer_contact {
-	margin-bottom: 4rem;
+	margin-bottom: 6rem;
 }
 ul.footer_contact li {
-	margin-bottom: 1rem;
-	font-size: 1.1rem;
-	font-style: italic;
+	margin-bottom: 1.4rem;
+	font-size: 1.4rem;
 	letter-spacing: 0.1rem;
-	text-transform: uppercase;
-	color: #fff;
 }
 ul.footer_contact li:last-child {
 	margin-bottom: 0;
+}
+ul.footer_contact li.contact_title {
+	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-size: 1.3rem;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+}
+// --- Footer Pride --- \\
+ul.footer_pride {
+	margin-bottom: 6rem;
+}
+ul.footer_pride li {
+	display: inline-block;
+	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-size: 1.1rem;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+	vertical-align: middle;
+}
+ul.footer_pride li svg {
+	width: 2rem;
+	height: 2rem;
+	fill: $hsla_gold;
+}
+ul.footer_pride li.pride_cross {
+	margin: 0 2rem;
 }
 
 
 // ==|== page styles ==========================================================
 // ============================================================================
+
+// Sections
+// ----------------------------------------------------------------------------
+main {
+}
+section,
+section article {
+	margin-bottom: 6rem;
+}
+section:last-child,
+section article:last-child {
+	margin-bottom: 0;
+}
+
+
+section.reserve,
+section.foodwine {
+	padding: 0 1.6rem;
+}
+
+// --- Content --- \\
+article h3,
+article h4,
+article h5 {
+	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	text-transform: uppercase;
+}
+article h3 {
+	font-size: 2.4rem;
+	letter-spacing: 0.3rem;
+}
+article h4 {
+	font-size: 1.8rem;
+	letter-spacing: 0.3rem;
+}
+article h5 {
+	margin-bottom: 3.2rem;
+	font-size: 1.6rem;
+	letter-spacing: 0.3rem;
+}
+
+div.wrap_content p,
+div.wrap_content cite {
+	margin-bottom: 2rem;
+	font-size: 1.4rem; // 1.8rem;
+	line-height: 1.5;
+}
+div.wrap_content blockquote p,
+div.wrap_content p:last-child {
+	margin-bottom: 0;
+}
+div.wrap_content p a {
+	text-decoration: underline;
+}
+div.wrap_content p a[href^="tel:"] {
+	text-decoration: none;
+}
+div.wrap_content cite {
+	font-style: normal;
+}
+
+// --- Wrap Heading --- \\
+div.wrap_heading {
+	position: relative;
+	margin-bottom: 6rem;
+}
+div.wrap_heading h3 {
+	position: absolute;
+	left: 0;
+	right: 0;
+}
+div.wrap_heading h3 span.letter_2 {
+	margin-right: 4.8rem;
+}
+div.wrap_heading img {
+	margin: 0 auto;
+	width: 8rem;
+}
+
+// --- Divider --- \\
+div.divider {
+	margin: 6rem auto 0 auto;
+	width: 2.6rem;
+	height: 2.6rem;
+}
+div.divider svg {
+	fill: $hsla_gold;
+}
+
+// --- Tag: Circle --- \\
+.tag_circle {
+	display: inline-block;
+	margin-bottom: 5.2rem;
+	padding: 1.4rem 2.2rem;
+	font-size: 1.5rem;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+	color: $hsla_gold;
+	border: 0.1rem solid $hsla_gold;
+}
+
+// Reserve
+// ----------------------------------------------------------------------------
+section.reserve article div.wrap_content {
+	margin-bottom: 3.2rem;
+}
+
+// Food & Wine
+// ----------------------------------------------------------------------------
+// --- Intro --- \\
+article.intro div.wrap_heading h3 {
+	top: 44%;
+	margin-left: 1.4rem;
+}
+// --- Lunch & Dinner --- \\
+ul.menu_toggle {
+	margin-bottom: 4rem;
+}
+ul.menu_toggle li {
+	display: inline-block;
+	position: relative;
+}
+ul.menu_toggle li.menu_lunch {
+	margin-right: 8rem;
+}
+ul.menu_toggle li.menu_lunch::after {
+	content: "/";
+	display: block;
+	position: absolute;
+	top: 0;
+	right: -4.4rem;
+	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-size: 1.8rem;
+	color: $hsla_gold;
+}
+ul.menu_toggle li a.toggled {
+	color: $hsla_gold;
+}
+h6.tag_circle.updated {
+}
+div.menu_list ul {
+	margin-bottom: 6rem;
+}
+div.menu_list ul:last-child {
+	margin-bottom: 0;
+}
+div.menu_list ul li {
+	margin-bottom: 1.6rem;
+	font-size: 1.4rem; // 1.8rem;
+	line-height: 1.2;
+}
+div.menu_list ul li span {
+	display: block;
+}
+div.menu_list ul li span.menu_item {
+	// margin-right: 1rem;
+	margin-bottom: 0.6rem;
+}
+
+// --- Wine --- \\
+article.wine div.wrap_heading h3 {
+	top: 58%;
+}
+article.wine div.wrap_content {
+	margin-bottom: 5.2rem;
+}
+
+
+a.tag_circle.wine_full {
+	color: $hsla_pink;
+	border-color: $hsla_pink;
+}
+a.tag_circle.wine_full:hover {
+	color: $hsla_blue;
+	border-color: $hsla_blue;
+}
+a.tag_circle.wine_full:active {
+	color: $hsla_blue-D;
+	border-color: $hsla_blue-D;
+}
 
 
