--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -1,6 +1,6 @@
 %section#foodwine.foodwine
 
-	%article.intro{"data-container" => "848"}
+	%article.intro{"data-container" => "width_848"}
 
 		.wrap_heading
 
@@ -19,7 +19,7 @@
 		.wrap_content
 			%p Our menu is inspired by tradition and dictated by the quality and availability of ingredients. We play off the similarities between the climates of eastern Ontario and northwest Italy, and create our take on classic dishes made with seasonal game, seafood and vegetables. Plus, sometimes we’ll just add whatever we want.
 
-	%article.lunchdinner{"data-container" => "848"}
+	%article.lunchdinner{"data-container" => "width_848"}
 
 		-# Detect what time it is and toggle Dinner if after a certain time?
 
@@ -131,7 +131,7 @@
 			%svg.svg_ui-close
 				%use{"xlink:href" => "#ui_close"}
 
-	%article.wine{"data-container" => "848"}
+	%article.wine{"data-container" => "width_848"}
 
 		.wrap_heading
 
