--- a/dev/haml/partials/_sec_reserve.haml
+++ b/dev/haml/partials/_sec_reserve.haml
@@ -1,6 +1,6 @@
 %section#reserve.reserve
 
-	%article.reservations{"data-container" => "848"}
+	%article.reservations{"data-container" => "width_848"}
 
 		.wrap_content
 			%h5 Reserve
