implemented all sections for mobile

--- a/dev/haml/partials/_html_footer.haml
+++ b/dev/haml/partials/_html_footer.haml
@@ -3,7 +3,7 @@
 	%ul.footer_contact
 		%li.contact_title North &amp; Navy
 		%li.contact_email
-			%a#secret_email{:href => "#", :title => "Email North and Navy"} email us
+			%a#email_footer{:href => "#", :title => "Email North and Navy"} email us
 		%li.contact_phone
 			%a{:href => "tel:+1-613-232-6289", :title => "Call us"} 613.232.6289
 
