--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -31,7 +31,8 @@
 				%a#toggle_dinner{:href => "#", :title => "See our Dinner menu"}
 					%h4 Dinner
 
-		%h6.tag_circle.updated Updated Feb 9
+		%span.tag_circle.updated
+			%h6.tag_text Updated Feb 9
 
 		.wrap_menu
 
@@ -152,7 +153,8 @@
 				%p In vino veritas.
 				%cite –Piny the Elder
 
-		%a.tag_circle.wine_full{:href => "#", :title => "View Full Wine List"} View Full Wine List
+		%a.tag_circle.wine_full{:href => "#", :title => "View Full Wine List"}
+			%span.tag_text View Full Wine List
 
 		#menu_wine.menu_list
 
