--- a/dev/haml/partials/_sec_photos.haml
+++ b/dev/haml/partials/_sec_photos.haml
@@ -1,11 +1,11 @@
 %section#photos.photos
 
-	.wrap_rule
+	.wrap_rule{"data-container" => "width_1200"}
 		.wrap_svg
 			%svg.svg_ui-eye
 				%use{"xlink:href" => "#ui_eye"}
 
-	%article#packery.packery{"data-container" => "width_848"}
+	%article#packery.packery{"data-container" => "width_1200"}
 
 		.gutter-sizer
 
