--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -15,7 +15,7 @@
 				%li
 					%a{:href => "#photos", :title => "Photos"} Photos
 				%li
-					%a{:href => "#contact", :title => "Get in Touch"} Get in Touch
+					%a#email_header{:href => "#", :title => "Get in Touch"} Get in Touch
 
 		%svg.svg_nn-logo
 			%use{"xlink:href" => "#nn_logo"}
